refactor: remove Diagrams and Interview Simulator links, add IDE link in multiple HTML files

--- a/embedded-ide.html
+++ b/embedded-ide.html
@@ -20,9 +20,7 @@
         <li><a href="resources.html" class="nav-link">Resources</a></li>
         <li><a href="portfolio.html" class="nav-link">Portfolio</a></li>
         <li><a href="quiz.html" class="nav-link">Quiz</a></li>
-        <li><a href="diagrams.html" class="nav-link">Diagrams</a></li>
-        <li><a href="interview-simulator.html" class="nav-link">Simulator</a></li>
-        <!-- New IDE link -->
+        <!-- Removed Diagrams and Interview Simulator -->
         <li><a href="embedded-ide.html" class="nav-link">IDE</a></li>
       </ul>
     </div>
@@ -53,10 +51,10 @@
     © 2025 Ohad’s WeCode. All rights reserved.
   </footer>
 
-  <!-- Scroll-to-top Button (as in your original code) -->
+  <!-- Scroll-to-top Button -->
   <button id="scrollToTopBtn" class="scroll-to-top-btn">▲</button>
 
-  <!-- Global JS (e.g., main.js for scroll-to-top, dark mode, etc.) -->
+  <!-- Global JS -->
   <script src="scripts/main.js"></script>
   <!-- Embedded IDE JS -->
   <script src="scripts/embedded-ide.js"></script>
