--- a/index.html
+++ b/index.html
@@ -22,11 +22,8 @@
         <li><a href="resources.html" class="nav-link">Resources</a></li>
         <li><a href="portfolio.html" class="nav-link">Portfolio</a></li>
         <li><a href="quiz.html" class="nav-link">Quiz</a></li>
-        <li><a href="diagrams.html" class="nav-link">Diagrams</a></li>
-        <li><a href="interview-simulator.html" class="nav-link">Simulator</a></li>
-        <!-- Updated nav: Add IDE link -->
+        <!-- Removed Diagrams and Interview Simulator -->
         <li><a href="embedded-ide.html" class="nav-link">IDE</a></li>
-        <!-- Dark Mode Toggle remains -->
         <button id="darkModeToggle" class="theme-btn">🌙 Dark Mode</button>
       </ul>
     </div>
