--- a/module2.html
+++ b/module2.html
@@ -7,70 +7,61 @@
   <link rel="stylesheet" href="styles/style.css">
 </head>
 <body class="page-module fade-in">
-<header>
-  <div class="nav-container">
-    <div class="brand-area">Ohad’s WeCode</div>
-    <ul class="nav-menu">
-      <li><a href="index.html" class="nav-link">Home</a></li>
-      <li><a href="exercises.html" class="nav-link">Exercises</a></li>
-      <li><a href="progress.html" class="nav-link">Progress</a></li>
-      <li><a href="resources.html" class="nav-link">Resources</a></li>
-      <li><a href="portfolio.html" class="nav-link">Portfolio</a></li>
-      <li><a href="quiz.html" class="nav-link">Quiz</a></li>
-      <li><a href="diagrams.html" class="nav-link">Diagrams</a></li>
-      <li><a href="interview-simulator.html" class="nav-link">Simulator</a></li>
-      <li><a href="embedded-ide.html" class="nav-link">IDE</a></li>
-    </ul>
-  </div>
-</header>
-
-<main class="page-content">
-  <section class="card fade-in">
-    <h1>Module 2: Data Structures &amp; Algorithms</h1>
-    <p>
-      Explore arrays, linked lists, sorting, searching, BFS/DFS, etc. 
-      Each lesson features tasks & code practice.
-    </p>
-
-    <button class="btn" onclick="toggleTimeline()">Toggle Lesson Timeline</button>
-    <div class="module-timeline" id="moduleTimeline" style="margin-top:15px;">
-      <div class="timeline-step">Step 1: Arrays &amp; Linked Lists</div>
-      <div class="timeline-step">Step 2: Trees &amp; Graphs</div>
-      <div class="timeline-step">Step 3: Sorting &amp; Searching</div>
+  <header>
+    <div class="nav-container">
+      <div class="brand-area">Ohad’s WeCode</div>
+      <ul class="nav-menu">
+        <li><a href="index.html" class="nav-link">Home</a></li>
+        <li><a href="exercises.html" class="nav-link">Exercises</a></li>
+        <li><a href="progress.html" class="nav-link">Progress</a></li>
+        <li><a href="resources.html" class="nav-link">Resources</a></li>
+        <li><a href="portfolio.html" class="nav-link">Portfolio</a></li>
+        <li><a href="quiz.html" class="nav-link">Quiz</a></li>
+        <!-- Removed Diagrams and Interview Simulator -->
+        <li><a href="embedded-ide.html" class="nav-link">IDE</a></li>
+      </ul>
     </div>
-    <hr style="margin:20px 0;"/>
+  </header>
 
-    <h2>Lesson 1: Arrays &amp; Linked Lists</h2>
-    <p>Implement basic operations (insert, delete, traverse) and analyze time complexities.</p>
-    <button class="btn" onclick="openExternalIDE('M2L1')">Open IDE for Lesson 1</button>
-    <hr style="margin:20px 0;"/>
+  <main class="page-content">
+    <section class="card fade-in">
+      <h1>Module 2: Data Structures &amp; Algorithms</h1>
+      <p>
+        Explore arrays, linked lists, sorting, searching, BFS/DFS, etc.
+        Each lesson features tasks & code practice.
+      </p>
+      <button class="btn" onclick="toggleTimeline()">Toggle Lesson Timeline</button>
+      <div class="module-timeline" id="moduleTimeline" style="margin-top:15px;">
+        <div class="timeline-step">Step 1: Arrays &amp; Linked Lists</div>
+        <div class="timeline-step">Step 2: Trees &amp; Graphs</div>
+        <div class="timeline-step">Step 3: Sorting &amp; Searching</div>
+      </div>
+      <hr style="margin:20px 0;"/>
+      <h2>Lesson 1: Arrays &amp; Linked Lists</h2>
+      <p>Implement basic operations (insert, delete, traverse) and analyze time complexities.</p>
+      <button class="btn" onclick="window.location.href='embedded-ide.html'">Open IDE for Lesson 1</button>
+      <hr style="margin:20px 0;"/>
+      <h2>Lesson 2: Trees &amp; Graphs</h2>
+      <p>Explore tree traversals and BFS/DFS on graphs. Watch out for complexities!</p>
+      <button class="btn" onclick="window.location.href='embedded-ide.html'">Open IDE for Lesson 2</button>
+      <hr style="margin:20px 0;"/>
+      <h2>Lesson 3: Sorting &amp; Searching</h2>
+      <p>Dive deeper into mergesort, quicksort, and searching approaches (binary, BFS, etc.).</p>
+      <button class="btn" onclick="window.location.href='embedded-ide.html'">Open IDE for Lesson 3</button>
+    </section>
+  </main>
 
-    <h2>Lesson 2: Trees &amp; Graphs</h2>
-    <p>Explore tree traversals and BFS/DFS on graphs. Watch out for complexities!</p>
-    <button class="btn" onclick="openExternalIDE('M2L2')">Open IDE for Lesson 2</button>
-    <hr style="margin:20px 0;"/>
+  <footer>
+    © 2025 Ohad’s WeCode. All rights reserved.
+  </footer>
 
-    <h2>Lesson 3: Sorting &amp; Searching</h2>
-    <p>Dive deeper into mergesort, quicksort, and searching approaches (binary, BFS, etc.).</p>
-    <button class="btn" onclick="openExternalIDE('M2L3')">Open IDE for Lesson 3</button>
-  </section>
-</main>
-
-<footer>
-  © 2025 Ohad’s WeCode. All rights reserved.
-</footer>
-
-<button id="scrollToTopBtn" class="scroll-to-top-btn">▲</button>
-<script src="scripts/main.js"></script>
-<script>
-function toggleTimeline(){
-  const timeline = document.getElementById("moduleTimeline");
-  if(timeline) timeline.classList.toggle("show");
-}
-function openExternalIDE(lessonID) {
-  const url = getWandboxLink(lessonID);
-  window.open(url, "_blank");
-}
-</script>
+  <button id="scrollToTopBtn" class="scroll-to-top-btn">▲</button>
+  <script src="scripts/main.js"></script>
+  <script>
+    function toggleTimeline(){
+      const timeline = document.getElementById("moduleTimeline");
+      if(timeline) timeline.classList.toggle("show");
+    }
+  </script>
 </body>
 </html>
