--- a/quiz.html
+++ b/quiz.html
@@ -16,9 +16,7 @@
         <li><a href="progress.html" class="nav-link">Progress</a></li>
         <li><a href="resources.html" class="nav-link">Resources</a></li>
         <li><a href="portfolio.html" class="nav-link">Portfolio</a></li>
-        <li><a href="diagrams.html" class="nav-link">Diagrams</a></li>
-        <li><a href="interview-simulator.html" class="nav-link">Simulator</a></li>
-        <!-- New IDE link added -->
+        <!-- Removed Diagrams and Interview Simulator -->
         <li><a href="embedded-ide.html" class="nav-link">IDE</a></li>
       </ul>
     </div>
