--- a/resources.html
+++ b/resources.html
@@ -16,9 +16,7 @@
         <li><a href="progress.html" class="nav-link">Progress</a></li>
         <li><a href="portfolio.html" class="nav-link">Portfolio</a></li>
         <li><a href="quiz.html" class="nav-link">Quiz</a></li>
-        <li><a href="diagrams.html" class="nav-link">Diagrams</a></li>
-        <li><a href="interview-simulator.html" class="nav-link">Simulator</a></li>
-        <!-- New IDE link -->
+        <!-- Removed Diagrams and Interview Simulator -->
         <li><a href="embedded-ide.html" class="nav-link">IDE</a></li>
       </ul>
     </div>
@@ -31,7 +29,6 @@
     </p>
 
     <div class="resources-grid fade-in">
-      <!-- Resource cards unchanged -->
       <div class="resource-card card">
         <h2>cppreference.com</h2>
         <p>Comprehensive documentation on C++ language features and the standard library.</p>
