--- a/exercises.html
+++ b/exercises.html
@@ -16,9 +16,7 @@
         <li><a href="resources.html" class="nav-link">Resources</a></li>
         <li><a href="portfolio.html" class="nav-link">Portfolio</a></li>
         <li><a href="quiz.html" class="nav-link">Quiz</a></li>
-        <li><a href="diagrams.html" class="nav-link">Diagrams</a></li>
-        <li><a href="interview-simulator.html" class="nav-link">Simulator</a></li>
-        <!-- New IDE link added -->
+        <!-- Removed Diagrams and Interview Simulator -->
         <li><a href="embedded-ide.html" class="nav-link">IDE</a></li>
       </ul>
     </div>
@@ -30,7 +28,7 @@
       Explore interactive modules presented as cards! Click a module to open it.
     </p>
 
-    <!-- New Grid Layout for Module Cards -->
+    <!-- Grid Layout for Module Cards -->
     <div class="modules-grid">
       <div class="course-module card">
         <h2>Module 1</h2>
