--- a/module1.html
+++ b/module1.html
@@ -25,9 +25,7 @@
         <li><a href="resources.html" class="nav-link">Resources</a></li>
         <li><a href="portfolio.html" class="nav-link">Portfolio</a></li>
         <li><a href="quiz.html" class="nav-link">Quiz</a></li>
-        <li><a href="diagrams.html" class="nav-link">Diagrams</a></li>
-        <li><a href="interview-simulator.html" class="nav-link">Simulator</a></li>
-        <!-- New IDE link -->
+        <!-- Removed Diagrams and Interview Simulator -->
         <li><a href="embedded-ide.html" class="nav-link">IDE</a></li>
       </ul>
     </div>
@@ -44,20 +42,18 @@
         <div class="timeline-step">Step 3: Lambdas &amp; STL Algorithms</div>
       </div>
       <hr style="margin:20px 0;"/>
-
       <h2>Lesson 1: RAII &amp; Constructors</h2>
       <p>Create a <code>FileWrapper</code> class that opens a file in its constructor and closes it in the destructor, handling errors gracefully.</p>
-      <button class="btn" onclick="openExternalIDE('M1L1')">Open IDE for Lesson 1</button>
+      <!-- Link to IDE now (all programming tasks link to our IDE) -->
+      <button class="btn" onclick="window.location.href='embedded-ide.html'">Open IDE for Lesson 1</button>
       <hr style="margin:20px 0;"/>
-
       <h2>Lesson 2: Smart Pointers &amp; Move Semantics</h2>
       <p>Use <code>std::unique_ptr</code>, <code>std::shared_ptr</code>, and move semantics to manage resources effectively, avoiding leaks.</p>
-      <button class="btn" onclick="openExternalIDE('M1L2')">Open IDE for Lesson 2</button>
+      <button class="btn" onclick="window.location.href='embedded-ide.html'">Open IDE for Lesson 2</button>
       <hr style="margin:20px 0;"/>
-
       <h2>Lesson 3: Lambdas &amp; STL Algorithms</h2>
       <p>Leverage lambdas for concise code with STL (e.g., <code>std::remove_if</code>) and explore different capture modes.</p>
-      <button class="btn" onclick="openExternalIDE('M1L3')">Open IDE for Lesson 3</button>
+      <button class="btn" onclick="window.location.href='embedded-ide.html'">Open IDE for Lesson 3</button>
     </section>
   </main>
 
@@ -71,10 +67,6 @@
     function toggleTimeline(){
       const timeline = document.getElementById("moduleTimeline");
       if(timeline) timeline.classList.toggle("show");
-    }
-    function openExternalIDE(lessonID) {
-      const url = getWandboxLink(lessonID);
-      window.open(url, "_blank");
     }
   </script>
 </body>
